# haskell-stm-channelize

./: ExceptionTarget.hs  journal  stm-channelize.cabal
Control/Concurrent/STM/: Channelize.hs
examples/: chat-client.hs  chat-server.hs
