name:                stm-channelize
version:             0.1
synopsis:            Wrap network connection with send/receive channels
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joey Adams
maintainer:          joeyadams3.14159@gmail.com
copyright:           Copyright (c) Joseph Adams 2012
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
    example/chat-server.hs
    example/chat-client.hs

library
    exposed-modules:    Control.Concurrent.STM.Channelize
    build-depends:      base == 4.*
                      , stm
    ghc-options:        -Wall
    other-extensions:   DeriveDataTypeable
